src/tests/snapshots/gitu__tests__search__search_next_and_previous.snap
---
source: src/tests/search.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 3 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 1e81efc main add thirdfile                                      Author Name __ |
▌eb81c40 add secondfile                                          Author Name __ |
 4c54307 add firstfile                                           Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: cea6305637e4e2b
